--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
     <!-- navbar login -->
     <nav class="navbar navbar-expand-lg shadow-none">
         <div class="container px-0">
-            <a class="navbar-brand" href="./home.html"
+            <a class="navbar-brand" href="./index.html"
                 ><img src="./assets/images/logo/logo.svg" alt=""
             ></a>
             <div class="d-flex align-items-center order-lg-3">
@@ -71,7 +71,7 @@
                     <li class="nav-item">
                         <a
                             class="nav-link"
-                            href="./home.html"
+                            href="./index.html"
                             id="navbarLanding"
                         >
                             Produit
