--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <!-- navbar login -->
 <nav class="navbar navbar-expand-lg shadow-none">
 	<div class="container px-0">
-		<a class="navbar-brand" href="./home.html"><img src="./assets/images/logo/logo.svg" alt=""></a>
+		<a class="navbar-brand" href="./index.html"><img src="./assets/images/logo/logo.svg" alt=""></a>
 		<div class="d-flex align-items-center order-lg-3">
 			<div class="d-flex align-items-center">
 				
