seo first optimization

--- a/blog.html
+++ b/blog.html
@@ -3,16 +3,18 @@
 
 <head>	<!-- Required meta tags -->
 
+<title>ParcoursFacile</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="keywords" content="">
-<meta name="author" content="Codescandy">
+<meta name="author" content="ParcoursFacile">
+<meta name="robots" content="nofollow">
 
 <script>
     // Render blocking JS:
     if (localStorage.theme) document.documentElement.setAttribute("data-theme", localStorage.theme);
-    </script>
+</script>
 
 <!-- Favicon icon-->
 <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon/favicon.ico">
@@ -30,7 +32,7 @@
    }
    
    </style>
-	<title>ParcoursFacile</title>
+	
 </head>
 
 <body class="bg-white">
@@ -38,7 +40,7 @@
     <nav class="navbar navbar-expand-lg shadow-none">
         <div class="container px-0">
             <a class="navbar-brand" href="./index.html"
-                ><img src="./assets/images/logo/logo.svg" alt=""
+                ><img src="./assets/images/logo/logo.svg" loading="lazy" alt="logo du logiciel ParcoursFacile"
             ></a>
             <div class="d-flex align-items-center order-lg-3">
                 <div class="d-flex align-items-center">
@@ -105,7 +107,7 @@
 							<h1 class="display-2 fw-bold">Blog</h1>
 							<p class="lead">
 								Découvrez les dernières tendances et des ressources utiles pour gérer et accélérer votre processus de sélection Parcoursup.
-							</p>
+                            </p>
 						</div>
 						
 					</div>
