--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Logiciel d'aide à la décision Parcoursup - ParcoursFacile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Evaluez 5 fois plus rapidement vos candidatures Parcoursup. ParcoursFacile est l'outil 100% personnalisé qui optimise votre commission d'examen des voeux.">
-  <meta name="keywords" content="ParcoursFacile, Parcoursup, outil d'aide à la décision, formation post-bac, candidature, examen des voeux">
+  <meta name="keywords" content="ParcoursFacile, Parcours Facile, Parcoursup, outil d'aide à la décision Parcoursup, formation post-bac, candidature, examen des voeux, commission d'examen des voeux">
   <meta name="author" content="ParcoursFacile">
 
 <script>
