--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 			<div class="col-lg-6 col-md-12 col-12">
 			  <!-- image -->
 			  <div class="mb-4 mb-lg-0 bg-gray-200 rounded-4 ">
-				<img src="./assets/images/software/page_web_reglages.svg" loading="lazy" alt="page Réglages du logiciel ParcoursFacile" class="img-fluid w-100">
+				<img src="./assets/images/software/page_web_reglages.png" loading="lazy" alt="page Réglages du logiciel ParcoursFacile" class="img-fluid w-100">
 			  </div>
 			</div>
 			<div class="col-lg-6 col-md-12 col-12 mt-4 mt-lg-0">
@@ -333,7 +333,7 @@
 			<div class="col-lg-6 col-md-12 col-12">
 			  <!-- image -->
 			  <div class="mt-4 mt-lg-0 bg-gray-200 rounded-4">
-				<img src="./assets/images/software/page_web_candidature.svg" loading="lazy" alt="page Evaluation du logiciel ParcoursFacile" class="img-fluid w-100">
+				<img src="./assets/images/software/page_web_candidature.png" loading="lazy" alt="page Evaluation du logiciel ParcoursFacile" class="img-fluid w-100">
 			  </div>
 			</div>
 		  </div>
@@ -344,7 +344,7 @@
 			<div class="col-lg-6 col-md-12 col-12">
 			  <!-- image -->
 			  <div class="mb-4 mb-lg-0 bg-gray-200 rounded-4 ">
-				<img src="./assets/images/software/page_web_classement.svg" loading="lazy" alt="page classement du logiciel ParcoursFacile" class="img-fluid w-100">
+				<img src="./assets/images/software/page_web_classement.png" loading="lazy" alt="page classement du logiciel ParcoursFacile" class="img-fluid w-100">
 			  </div>
 			</div>
 			<div class="col-lg-6 col-md-12 col-12 mt-4 mt-lg-0">
