removed name Claire

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 					ParcoursFacile fonctionne parfaitement. Je vous remercie pour la qualité du service fourni."</p>
                 <!-- text -->
 
-                <p class="mb-0 ">Claire d'Hennezel</p>
+                <!-- <p class="mb-0 ">Claire d'Hennezel</p> -->
                 <span class="">Co-responsable du BUT Info-comm Publicité - IUT Bordeaux Montaigne</span>
               </div>
 
