--- a/blog.html
+++ b/blog.html
@@ -204,9 +204,8 @@
             <div class="row  justify-content-center text-center  ">
                 <div class="col-12 col-md-12 col-xl-8 px-0 ">
                     <nav class="nav nav-footer justify-content-center">
-                        <a class="nav-link" href="#">Produit </a>
-                        <a class="nav-link" href="#">Tarifs </a>
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="./index.html">Produit </a>
+                        <a class="nav-link" href="./blog.html">Blog</a>
                     </nav>
                 </div>
                 <!-- Desc -->
